<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.semrom.tapcolors.MainActivity" >

    <TextView
        android:id="@+id/menu_activity_titre_jeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/menu_activity_logo_jeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/menu_activity_play_button"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/play_button" />

    <Button
        android:id="@+id/menu_activity_how_to_play_button"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/how_to_play_text" />

    <Button
        android:id="@+id/menu_activity_about_button"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/about_text" />

</LinearLayout>
