<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.semrom.tapcolors.AboutActivity" >

    <TextView
        android:id="@+id/about_activity_about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_text"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/about_activity_logo_jeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/about_activity_about_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/about_description"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/about_activity_cancel_button"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cancel_button" />

</LinearLayout>