<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_over_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.semrom.tapcolors.GameOverActivity" >

    <TextView
        android:id="@+id/game_over_activity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_over_text"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/howTo_activity_logo_jeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/game_over_activity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/game_over_activity_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/game_over_activity_highScore_zone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/game_over_activity_highScore_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_text"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/game_over_activity_highScore_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/orange"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/game_over_activity_replay_button"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/replay_button" />

    <Button
        android:id="@+id/game_over_activity_menu_button"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/menu_button" />

</LinearLayout>